--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: NLD-Lab IISER-K
 #email: your-email@example.com
-description: > # this means to ignore newlines until "baseurl:"
-  We work on problems in nonlinear dynamics with applications in various fields ranging from power grid management to relativity.
+description: We work on problems in nonlinear dynamics with applications in various fields ranging from power grid management to relativity.
 #baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
