Changes to People page for mobile-friendly rendering; changes to articles

--- a/_data/articles.yml
+++ b/_data/articles.yml
@@ -1,41 +1,38 @@
 - authors:
-    - author: "G. H. Yuan"
-    - author: "S. Banerjee"
-    - author: "E. Ott"
-    - author: "J. A. Yorke"    
-  title: "Border-collision bifurcations in the buck converter"
-  journal: "IEEE Trans. Circuits Syst. I Fundam. Theory Appl."
-  volume: "45"
-  no: "7"
-  pages: "707-716"
-  date: "Jul. 1998"
+    - author: "B. K. Lenka"
+    - author: "S. Banerjee" 
+  title: "Asymptotic stability and stabilization of a class of nonautonomous fractional order systems"
+  journal: "Nonlinear Dynamics"
+  volume: "85"
+  pages: "167-177"
+  date: "2016"
   
 - authors:
+    - author: "P. Adhyapok"
+    - author: "M. Patra"
     - author: "S. Banerjee"
-    - author: "C. Grebogi"
-  title: "Border collision bifurcations in two-dimensional piecewise smooth maps"
-  journal: "Phys. Rev. E"
-  volume: "59"
-  pages: "4052-4061"
-  date: "1999"
+  title: "The Behavior of Synchronized Frequency in Weakly Coupled Nonidentical Periodic Oscillators"
+  journal: "International Journal of Bifurcation and Chaos"
+  volume: "27"
+  no: 1
+  pages: "1750008"
+  date: "2017"
   
 - authors:
+    - author: "D. Mandal"
     - author: "S. Banerjee"
-    - author: "P. Ranjan"
-    - author: "C. Grebogi"
-  title: "Bifurcations in two-dimensional piecewise smooth maps: Theory and applications in switching circuits"
-  journal: "IEEE Trans. Circuits Systems I Fund. Theory Appl."
-  volume: "47"
-  pages: "633-643"
-  date: "2000"
+  title: "Effect of stochastically moving border on basins of attraction in a class of piecewise smooth maps"
+  journal: "Physics Letters A"
+  volume: "381"
+  pages: "2161-2166"
+  date: "2017"
   
 - authors:
+    - author: "K. Mandal"
     - author: "S. Banerjee"
-    - author: "J. Yorke"
-    - author: "C. Grebogi"
-  title: "Robust chaos"
-  journal: "Phys. Rev. Lett."
-  volume: "80"
-  pages: "3049--3052"
-  date: "1998"
-  
+  title: "Synchronization Phenomena in Interconnected Power Electronic Systems"
+  journal: "IEEE Transactions on Circuits and Systems – II"
+  volume: "3"
+  no: "2"
+  pages: "221-225"
+  date: "February 2016"
