Updated MP's email ID

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -37,7 +37,7 @@
   category: phds
   img_url: "/images/people_img/mahashweta.jpg"
   description: I received my B.Sc degree in Physics from Visa-Bharati University in 2012. I am a 6th year Integrated PhD student in IISER-Kolkata.<br><br>I am mainly interested in three dimensional piecewise smooth systems. Systems that are not smooth can undergo bifurcations that are forbidden in smooth systems, such as border collision bifurcations and robust chaos. I have also studied synchronization in periodic oscillators.
-  email:
+  email: mp12ip005@iiserkol.ac.in
   ext_url: https://scholar.google.co.in/citations?user=KitzeHQAAAAJ&hl=en&oi=ao
   
 - name: Soumyajit Seth
