--- a/_data/people.yml
+++ b/_data/people.yml
@@ -23,7 +23,7 @@
   category: masters
   img_url: "/images/people_img/subhayu.png"
   description: I primarily work in the post-Newtonian formalism using the General Relativistic model of gravitational system. Tell-tale signs of non-linearity, in the form of quasi-periodic or multi-periodic orbits around black hole systems are the focus of my work. Geodesic equations are taken as the basis and hence, this involves heavy computational work. I intend to extend my work into numerical relativity in the coming days, analyzing compact binary systems.<br><br>After completing my preliminary school education, I received my Bachelor’s Degree in Technology, specializing in Electronics and Communications. I have an ardent interest in diverse areas like Internet of Things, Machine Learning and Neural Networks, as well as Artificial Intelligence of game playing bots. Other than this, I am a puzzles and games aficionado and a competitive quizzer.
-  email:
+  email: sb15ip007@iiserkol.ac.in
   ext_url: https://www.researchgate.net/profile/Subhayu_Bagchi
   
 - name: Sayantan Majumdar
@@ -58,7 +58,7 @@
   category: phds
   img_url: "/images/people_img/arnab.png"
   description: My research interests lie in complex network dynamics. I am presently working on applying complex networks techniques to study vulnerabilities of the Indian power grid. I previously worked on modeling stringed instruments as arrays of coupled oscillators. 
-  email:
+  email: aa14ip031@iiserkol.ac.in
   ext_url:
   
 - name: Bichitra Kumar Lenka
