--- a/_data/people.yml
+++ b/_data/people.yml
@@ -15,7 +15,7 @@
 - name: Srashti Goyal
   category: masters
   img_url: "/images/people_img/srashti.png"
-  description: I am a BS-MS student with the Department of Physical Sciences at IISER-Kolkata. Currently I am working on bifurcation analysis of discontinuous or resetmap dynamical systems with a focus on the Izheikevich neuron model. My main interest is in the computational modeling and analysis of various physical systems from biophysics to geophysics.
+  description: I am a BS-MS student with the Department of Physical Sciences at IISER-Kolkata. Currently I am working on the bifurcation analysis of a discontinuous or reset-map dynamical system, Izheikevich model of a neuron. My main interest is in the computational modeling and analysis of various physical systems ranging from biophysics to geophysics.
   email: sg13ms144@iiserkol.ac.in
   ext_url:
   
