Update people.yml to remove Dhrubajyoti's photo

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -49,7 +49,7 @@
   
 - name: Dhrubajyoti Mandal
   category: phds
-  img_url: "/images/people_img/dhrubajyoti.jpg"
+  img_url: 
   description: My research interests lie in the dynamics of piecewise smooth maps. I have been awarded the CSIR-UGC NET Junior Research Fellowship and the IISER-Kolkata Institute Fellowship for pursuing my PhD. 
   email: dmandal93@gmail.com
   ext_url: "/people_pdfs/dhrubajyoti_pubs.pdf"
