Updated description for Kuntal Mandal

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -78,7 +78,7 @@
 - name: Dr. Kuntal Mandal
   category: alumni
   img_url: "/images/people_img/kuntal.jpg"
-  description: Dr. Kuntal Mandal was a post-doctoral fellow from 2012 to 2017 at KAU Jedau Saudi Arabia and IISER-Kolkata. His research interests lie in the development of control strategies for power electronic systems. He is currently an Assistant Professor at NIT Sikkim. 
+  description: I was a post-doctoral fellow from 2012 to 2017 at KAU Jedau Saudi Arabia and IISER-Kolkata. My research interests lie in the development of control strategies for power electronic systems. I am currently an Assistant Professor at NIT Sikkim. 
   email: dr.kuntal.mandal@gmail.com
   ext_url: "/people_pdfs/kuntal_cv.pdf"
 
