Soumyajit Seth has updated his profile.

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -43,7 +43,7 @@
 - name: Soumyajit Seth
   category: phds
   img_url: "/images/people_img/soumyajit.jpg"
-  description: I obtained my Bachelors and Masters Degree in Physics from the University of Burdwan, West Bengal, India in 2012 and 2014 respectively. I joined as a guest faculty in the Electronics Department at Burdwan Raj College under the University of Burdwan in 2014. I am now pursuing research and Teaching Assistantship (TA) in different courses with the Department of Physical Sciences at IISER Kolkata. My work is funded by the INSPIRE Scholarship and INSPIRE Fellowship (given by DST).<br><br>My research involves investigating bifurcation phenomena in piecewise smooth systems experimentally. Currently, I am studying multiple attractor bifurcation phenomena, in a real electronic system that gives rise to a 2D piecewise smooth system. 
+  description: I obtained my Bachelors and Masters Degree in Physics from the University of Burdwan, West Bengal, India in 2012 and 2014 respectively. I joined as a guest faculty in the Electronics Department at Burdwan Raj College under the University of Burdwan in 2014. I am now pursuing my research and Teaching Assistantship (TA) in different courses with the Department of Physical Sciences at IISER Kolkata. My work is funded by the INSPIRE Fellowship (given by DST).<br><br>My research involves investigating different bifurcation phenomena in piecewise smooth systems experimentally. 
   email: ss14rs057@iiserkol.ac.in
   ext_url:
   
