--- a/_data/people.yml
+++ b/_data/people.yml
@@ -73,7 +73,7 @@
   img_url: "/images/people_img/Nivedita.jpg"
   description: After completing M.Sc from Indian Institute of Technology Delhi, I joined Jawaharlal Nehru University as a project student in June 2011. I worked on Molecular dynamics simulations in granular materials for almost a year with Prof. Sanjay Puri. I am currently enrolled as a Ph.D student at Indian Institute of Science Education and Research Kolkata since January 2013. <br><br>My Ph.D thesis is centered around exploring aspects of temporally perturbed dynamical system which includes parametric resonance, noise-induced transition, the effect of time-varying network topology in a system with long-range interaction. I am also involved in the investigation of multi-body dynamics and dynamical system analysis in cosmological models. 
   email: nivedita.home@gmail.com <br><br>nivedita.iitd@gmail.com
-  ext_url:
+  ext_url: https://drive.google.com/file/d/1MkhUAqCwcvu4WVo5kdG6LADIYeNUoF0r/view
   
 - name: There are currently no post-doctoral students in the lab
   category: postdocs
